<resources>
    <string name="app_name">TravelExpence</string>
    <string name="hello_their">Hello Their!</string>
    <string name="hello">HELLO</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password</string>
    <string name="provider_password">provide your account\'s email for which you want to reset your password</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="save_money_Signip">Sign up to save your money during travel</string>
    <string name="full_name">Full Name</string>
    <string name="make_selection">Make Selection</string>
    <string name="verify_is_it_you">Verify is it you?</string>
    <string name="user_name_password">User Name / Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="flight">Flight</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_flights">Flights</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="flights">FLIGHTS</string>
    <string name="Hello">TextView</string>
    <string name="select">Select</string>
    <string name="dashboard">DASHBOARD</string>
</resources>