<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ForgetPassword"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="69dp"
            android:layout_height="52dp"
            android:src="@drawable/back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_password"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"

            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:src="@drawable/username_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/forget_username_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="0dp"

            android:padding="10dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/small_password"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/forget_password_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>


    </LinearLayout>
</ScrollView>