<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ForgetPassword"
    android:padding="20dp"
    android:background="@drawable/back1"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="69dp"
            android:layout_height="52dp"
            android:src="@drawable/back_icon" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_big2"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/provider_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_forget"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="Email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:background="#00000000"
                android:id="@+id/email_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:text="@string/next"
            android:textColor="@color/white" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_marginTop="-170dp"/>

    </LinearLayout>
</ScrollView>